fix the problem of list